--- a/My-own-sec4/css/style.css
+++ b/My-own-sec4/css/style.css
@@ -36,8 +36,13 @@ h2 {
   font-weight: 700; 
 }
 p {
-  line-height: 1.6;
+  line-height: 1.6 !important;
   margin-bottom: 20px;
+}
+
+.content-block p{
+  line-height: 1.8;
+  margin-bottom: 30px;
 }
 /***************
 Modular Styles
@@ -118,8 +123,47 @@ Interior Pages
 }
 
 
+/*Buttons Styles start*/
+
+.button{
+  border:2px solid #333 ;
+  color:#333;
+  padding:10px 0px;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  transition: .40s all ease;
+  -webkit-transition: .40s all ease;
+  -moz-transition: .40s all ease;
+  -o-transition: .40s all ease;
+  transition: .40s all ease;
+}
+.button:focus,
+.button:hover{
+  background-color: #333;
+  color:#FFF;
+}
+.learn-more{
+  border-color: #FFF;
+  color:#FFF;
+  display:block;
+  
+}
+
+/*video styles*/
+
+.button-narrow{
+  width:25%;
+}
 
 
 
+/*Buttons Styles end*/
 
 
+/* 
+#jaws p{
+  line-height: 3;
+} */
