--- a/My-own-sec4/css/style.css
+++ b/My-own-sec4/css/style.css
@@ -106,6 +106,15 @@ Interior Pages
 .content-block .figure {
   float: left;
   margin: 30px;
+  border: 10px solid #fff;
+  overflow: hidden;
+}
+.content-block .figure img{
+  float: left;
+  transition: .4s ;
+}
+.content-block .figure img:hover{
+  transform: rotate(15deg) scale(1.2,1.2);
 }
 /****************
 3 columns
@@ -139,11 +148,14 @@ Interior Pages
   -moz-transition: .40s all ease;
   -o-transition: .40s all ease;
   transition: .40s all ease;
+  transform: scale(.9,.9) translate(0, -5px);
 }
 .button:focus,
 .button:hover{
   background-color: #333;
   color:#FFF;
+  transform: scale(1.1,1.1);
+
 }
 .learn-more{
   border-color: #FFF;
@@ -158,6 +170,7 @@ Interior Pages
   width:25%;
 }
 
+/**/
 
 
 /*Buttons Styles end*/
