--- a/My-own-sec4/css/style.css
+++ b/My-own-sec4/css/style.css
@@ -1,137 +1,165 @@
-
 /***************
 Global
 ***************/
 ::-moz-selection {
-  background-color: #eb2428; 
+  background-color: #eb2428;
 }
+
 ::selection {
-  background-color: #eb2428; 
+  background-color: #eb2428;
 }
 
 .wrapper {
-  width:960px;
+  width: 960px;
   margin: 0 auto;
 }
+
 body {
   background-color: #dcdcdc;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 16px; 
+  font-size: 16px;
 }
+
 a {
   text-decoration: none;
   color: #eb2428;
 }
+
 h1 {
   font-weight: 700;
   font-size: 80px;
   color: #0072ae;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
+
 h2 {
   font-size: 30px;
   margin-bottom: 10px;
   color: #eb2428;
-  font-weight: 700; 
+  font-weight: 700;
 }
+
 p {
   line-height: 1.6 !important;
   margin-bottom: 20px;
 }
 
-.content-block p{
+.content-block p {
   line-height: 1.8;
   margin-bottom: 30px;
 }
+
 /***************
 Modular Styles
 ***************/
 .float-left {
-  float: left; 
+  float: left;
 }
+
 .float-right {
-  float: right; 
+  float: right;
 }
+
 .clear {
-  clear: both; 
+  clear: both;
 }
+
 .bold {
-  font-weight: bold; 
+  font-weight: bold;
 }
+
 .hidden,
 .hide {
-  display: none; 
+  display: none;
 }
+
 .relative {
-  position: relative; 
+  position: relative;
 }
+
 .absolute {
-  position: absolute; 
+  position: absolute;
 }
+
 .block {
-  display: block; 
+  display: block;
 }
+
 .inline-block {
-  display: inline-block; 
+  display: inline-block;
 }
+
 .text-centered {
-  text-align: center; 
+  text-align: center;
 }
+
 /****************
 Interior Pages
 ****************/
-.intro-content  {
+.intro-content {
   width: 100%;
   padding-bottom: 80px;
 }
+
 .content-block {
   padding: 50px 0;
 }
+
 .content-block h1 {
   color: #fff;
 }
+
 .style-2 {
   background-color: #494949;
 }
+
 .style-2 p {
   color: #fff;
 }
+
 .style-1 {
   background-color: #58C9EB;
 }
+
 .style-1.wave-border {
   background: #58C9EB url('../images/wave.jpg') repeat-x 0 0;
 }
+
 .content-block .figure {
   float: left;
   margin: 30px;
   border: 10px solid #fff;
   overflow: hidden;
 }
-.content-block .figure img{
+
+.content-block .figure img {
   float: left;
-  transition: .4s ;
-  -webkit-transition: .4s ;
-  -moz-transition: .4s ;
-  -o-transition: .4s ;
-  transition: .4s ;
+  transition: .4s;
+  -webkit-transition: .4s;
+  -moz-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
 
 }
-.content-block .figure img:hover{
-  transform: rotate(15deg) scale(1.2,1.2);
+
+.content-block .figure img:hover {
+  transform: rotate(15deg) scale(1.2, 1.2);
 }
+
 /****************
 3 columns
 ****************/
 .secondary-section {
-  margin-bottom: 50px;  
+  margin-bottom: 50px;
 }
- .column {
+
+.column {
   float: left;
   width: 300px;
   margin-left: 30px;
- }
+}
+
 .column:first-child {
   margin-left: 0;
 }
@@ -139,10 +167,10 @@ Interior Pages
 
 /*Buttons Styles start*/
 
-.button{
-  border:2px solid #333 ;
-  color:#333;
-  padding:10px 0px;
+.button {
+  border: 2px solid #333;
+  color: #333;
+  padding: 10px 0px;
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
@@ -153,26 +181,28 @@ Interior Pages
   -moz-transition: .40s all ease;
   -o-transition: .40s all ease;
   transition: .40s all ease;
-  transform: scale(.9,.9) translate(0, -5px);
+  transform: scale(.9, .9) translate(0, -5px);
 }
+
 .button:focus,
-.button:hover{
+.button:hover {
   background-color: #333;
-  color:#FFF;
-  transform: scale(1.1,1.1);
+  color: #FFF;
+  transform: scale(1.1, 1.1);
 
 }
-.learn-more{
+
+.learn-more {
   border-color: #FFF;
-  color:#FFF;
-  display:block;
-  
+  color: #FFF;
+  display: block;
+
 }
 
 /*video styles*/
 
-.button-narrow{
-  width:25%;
+.button-narrow {
+  width: 25%;
 }
 
 /**/
@@ -185,3 +215,45 @@ Interior Pages
 #jaws p{
   line-height: 3;
 } */
+
+.intro-content {
+  width: 360px;
+  margin-right: 60px;
+  float: left;
+}
+
+.go-premium {
+  width: 300px;
+  float: left;
+  margin-top: 125px;
+}
+
+.call-to-action {
+  border: 2px solid #FFF;
+  color: #FFF;
+  padding: 25px;
+  display: block;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  transition: 0.4s all ease;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#33d3ff+0,0071ae+78 */
+  background: #33d3ff;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #33d3ff 0%, #0071ae 78%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #33d3ff 0%, #0071ae 78%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #33d3ff 0%, #0071ae 78%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33d3ff', endColorstr='#0071ae', GradientType=0);
+  /* IE6-9 */
+
+}
+
+.call-to-action:hover {
+  background-color: #FFF;
+  border-color: #0072ae;
+  color: #0072ae;
+}
