nav initially built , pseudoclasses now

--- a/My-own-sec4/css/style.css
+++ b/My-own-sec4/css/style.css
@@ -257,3 +257,41 @@ Interior Pages
   border-color: #0072ae;
   color: #0072ae;
 }
+
+/*nav*/
+
+
+
+.primary-nav{
+  float: right;
+}
+
+.primary-nav > li{
+  float: left;
+}
+
+.primary-nav > li > a{
+  float: left;
+  padding: 25px 0px;
+  width: 150px;
+  border-left: 1px solid #333;
+
+}
+
+nav li a {
+  font-family: Arial, Helvetica, sans-serif;
+  color:#766e65;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 16px;
+  -webkit-transition: 0.4s background-color linear;
+  -moz-transition: 0.4s background-color linear;
+  -o-transition: 0.4s background-color linear;
+  transition: 0.4s background-color linear;
+}
+nav li a:focus,
+nav li a:hover,
+nav li a.active{
+  background-color:#eb2428;
+  color:#fff;
+}
