--- a/My-own-sec4/css/reset.css
+++ b/My-own-sec4/css/reset.css
@@ -68,3 +68,9 @@ strong {
 img, iframe, video, object {
   max-width: 100%; 
 }
+html{
+  box-sizing: border-box;
+}
+*,*:before,*:after{
+  box-sizing: inherit;
+}
