CSS course completed last task left

--- a/My-own-sec4/css/responsive.css
+++ b/My-own-sec4/css/responsive.css
@@ -21,6 +21,10 @@
     .columns{
         flex-direction: column;
     }
+    .column{
+        flex-basis: auto;
+        margin-bottom:50px;
+    }
     nav{
         position: static; 
     }
