--- a/My-own-sec4/css/style.css
+++ b/My-own-sec4/css/style.css
@@ -226,13 +226,52 @@ Interior Pages
 ****************/
 .columns {
   display: flex;
+  justify-content: space-between;
 }
-
 .column figure {
   max-width: 50%;
+  flex-basis: 150px;
+  width:50%;
+}
+.column {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.column .button {
+  margin-top: auto;
+  width:90%;
+}
+.column h2{
+  align-self: flex-start;
 }
 
-.column {}
+/* product listing */
+
+.product-list-item {
+  display: flex;
+  border-bottom: 1px solid #766e65;
+  align-items: center;
+  height: 80px;
+}
+.product-list-item figure {
+  width: 50px;
+  margin-right: 20px;
+}
+.product-list-item h2 {
+  flex-basis: 250px;
+  margin: 0;
+}
+.product-list-item p {
+  margin: 0;
+}
+.product-list-item .button {
+  margin-left: auto;
+  transform: scale(1);
+  width: 130px;
+}
 
 /***************
 Flexbox demo
@@ -241,17 +280,17 @@ Flexbox demo
 .flex-container {
   margin-top: 200px;
   display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  height:400px;
+  border: 1px solid black;
+  flex-flow: column wrap;
 }
 
 .flex-item {
   padding: 20px;
-  /* flex-grow: 1;
-  flex-basis: 200px;
-  flex-shrink: 1; */
-  /*shorthand for the above ^^ grow : shrink : basis*/
-  flex: 1 1 200px;
-
 }
+
 
 .flex-item1 {
   background: deeppink;
@@ -259,7 +298,6 @@ Flexbox demo
 
 .flex-item2 {
   background: orange;
-  flex-shrink: 2;
 }
 
 .flex-item3 {
@@ -272,6 +310,9 @@ Flexbox demo
 
 .flex-item5 {
   background: olive;
+}
+.flex-item6 {
+  background: cyan;
 }
 
 
